--- a/Revisao02/Avaliacao02/index.html
+++ b/Revisao02/Avaliacao02/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>Avaliacao 02</title>
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>  
     <script type="text/javascript" src="script/jQuery.js"></script>
     <script type="text/javascript" src="script/scripts.js"></script>       
